# Animal_Vet

APIs/: .gitignore  Cargo.toml
APIs/Backend/: .env.example  Cargo.toml
APIs/Backend/Logs/: Backend_tests.2024-10-16  Backend_tests.2024-10-27
APIs/Backend/src/: lib.rs  main.rs  main_test.rs  routes.rs
APIs/Backend/src/controller/: appointments_ctrl.rs  availability_ctrl.rs  mod.rs  pet_types_ctrl.rs  pets_ctrl.rs  services_ctrl.rs  users_ctrl.rs
APIs/Backend/src/core/: appointments_core.rs  mod.rs  pets_core.rs  services_core.rs  users_core.rs
APIs/Backend/src/data/: appointments_data.rs  mod.rs  pet_types_data.rs  pets_data.rs  services_data.rs  users_data.rs
APIs/Backend/tests/: availability.rs  main.rs  pet_types.rs  pets.rs  users.rs
APIs/Backoffice/: .env.example  Cargo.toml
APIs/Backoffice/Logs/: Backoffice_tests.2024-10-10  Backoffice_tests.2024-10-16  Backoffice_tests.2024-10-27  Backoffice_tests.2024-10-29
APIs/Backoffice/src/: lib.rs  main.rs  main_test.rs  routes.rs
APIs/Backoffice/src/controller/: appointments_ctrl.rs  availability_ctrl.rs  days_ctrl.rs  medical_records_ctrl.rs  mod.rs  pet_types_ctrl.rs  pets_ctrl.rs  services_ctrl.rs  special_dates_ctrl.rs  unavailable_hours_ctrl.rs  users_ctrl.rs  work_days_ctrl.rs
APIs/Backoffice/src/core/: appointments_core.rs  availability_core.rs  days_core.rs  medical_records_core.rs  mod.rs  pet_types_core.rs  pets_core.rs  services_core.rs  special_dates_core.rs  unavailable_hours_core.rs  users_core.rs  work_days_core.rs
APIs/Backoffice/src/data/: appointments_data.rs  days_data.rs  medical_records_data.rs  mod.rs  pet_types_data.rs  pets_data.rs  services_data.rs  special_dates_data.rs  unavailable_hours_data.rs  users_data.rs  work_days_data.rs
APIs/Backoffice/tests/: appointments.rs  availability.rs  main.rs  medical_records.rs  pet_types.rs  pets.rs  services.rs  special_dates.rs  unavailable_hours.rs  users.rs  work_days.rs
APIs/Migration/: Cargo.toml  README.md
APIs/Migration/src/: lib.rs  m20240706_030902_create_user_roles.rs  m20240706_031656_create_user_role_events.rs  m20240706_032410_create_users.rs  m20240706_033314_create_user_events.rs  m20240706_034004_create_pet_types.rs  m20240706_034310_create_pet_type_events.rs  m20240706_034731_create_pets.rs  m20240706_035316_create_pet_events.rs  m20240706_045753_create_services.rs  m20240706_050053_create_service_events.rs  m20240706_050444_create_work_days.rs  m20240706_051229_create_work_day_events.rs  m20240706_052700_create_special_dates.rs  m20240706_054536_create_special_date_events.rs  m20240706_054837_create_unavailable_hours.rs  m20240706_055507_create_unavailable_hour_events.rs  m20240706_055925_create_appointments.rs  m20240706_060542_create_appointment_events.rs  m20240706_061017_create_medical_records.rs  m20240807_142445_create_sessions.rs  m20240807_143628_create_session_events.rs  m20241031_020452_create_password_reset.rs
APIs/Migration_Settings/: .env.example  Cargo.toml  README.md
APIs/Migration_Settings/src/: lib.rs  m20240901_213727_create_private_keys.rs  m20241031_001446_create_settings.rs  main.rs
APIs/Models/: .env.example  Cargo.toml  README.md
APIs/Models/src/entities/: appointment_events.rs  appointments.rs  day_events.rs  days.rs  medical_records.rs  mod.rs  operating_hour_events.rs  operating_hours.rs  password_reset.rs  pet_events.rs  pet_type_events.rs  pet_types.rs  pets.rs  prelude.rs  service_events.rs  services.rs  session_events.rs  sessions.rs  special_date_events.rs  special_dates.rs  unavailable_hour_events.rs  unavailable_hours.rs  user_events.rs  user_role_events.rs  user_roles.rs  users.rs  work_day_events.rs  work_days.rs
APIs/Models_Settings/: Cargo.toml  README.md
APIs/Models_Settings/src/entities/: mod.rs  prelude.rs  privkey.rs  settings.rs
APIs/Security/: Cargo.toml
APIs/Security/src/: lib.rs
APIs/Security/src/controller/: mod.rs  password_reset_ctrl.rs  session_ctrl.rs  settings_ctrl.rs
APIs/Security/src/core/: mod.rs  password_reset_core.rs  private_key_core.rs  session_core.rs  settings_core.rs  user_roles_core.rs
APIs/Security/src/data/: mod.rs  password_reset_data.rs  private_key_data.rs  session_data.rs  settings_data.rs  user_roles_data.rs  users_data.rs
APIs/Utils/: Cargo.toml
APIs/Utils/src/: availability.rs  code_message.rs  config.rs  cookies.rs  environments.rs  lib.rs  misc_resources.rs  outcome.rs  permissions.rs  session_details.rs  startup.rs  validator.rs
