[workspace]
members = [
    "Backend",
    "Migration",
    "Models",
    "Backoffice",
    "Security",
    "Utils",
    "Migration_Settings",
    "Models_Settings"
]

[workspace.dependencies]
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
serde = "1.0.203"
actix-web = "4"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
dotenvy = "0.15.7"
once_cell = "1.19.0"
tokio = { version = "1.0", features = ["sync", "macros", "rt-multi-thread"] }
chrono = "0.4.38"
ring = "0.17.8"
rand = "0.8.5"
base64 = "0.22.1"
tracing = "0.1.40"
tracing-actix-web = "0.7.11"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-appender = "0.2.3"
reqwest = { version = "0.12.5", features = ["json", "cookies"] }
uuid = "1.10.0"
openssl = "0.10.66"
bcrypt = "0.15.1"