[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
backoffice = { path = "../Backoffice" }
models = { path = "../Models" }
security = { path = "../Security" }
utils = { path = "../Utils" }
sea-orm = { workspace = true }
serde = { workspace = true }
actix-web = { workspace = true }
actix-session = { workspace = true }
async-std = { workspace = true }
dotenvy = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
ring = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
bcrypt = { workspace = true }

[dependencies.sea-orm-migration]
version = "0.12"
features = ["runtime-tokio-rustls", "sqlx-postgres"]

[dev-dependencies]
reqwest = { workspace = true }

[profile.test]
test-threads = 1