[package]
name = "migration_settings"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration_settings"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
openssl = { workspace = true }

[dependencies.sea-orm-migration]
version = "0.12"
features = [ "runtime-tokio-rustls", "sqlx-postgres" ]
